# gerousia-bot

./: .env.template  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: python-packages.yml
gerousiabot/: bot_handlers.py  discord_apis.py  discord_bot.py  main.py  telegram_bot.py  telegram_bot_handlers.py  utils.py
gerousiabot/discord/: discord_apis.py
gerousiabot/telegram/: telegram_bot.py
src/gerousiabot/: discord_bot.py  main.py  telegram_bot.py  telegram_bot_handlers.py
tests/: test_bot_handlers.py  test_discord_apis.py  test_discord_bot.py  test_telegram_bot.py  test_utils.py
tests/discord/: test_discord_apis.py
tests/telegram/: test_telegram_bot.py
